# Agentic_system

./: .env  .gitignore  README.md  pyproject.toml
scripts/: import_mindmap.py  init_db.sql  verify_planner.py
src/agents/meta_agents/orchestrator/: agent.py
src/agents/meta_agents/orchestrator/.adk/: session.db
src/agents/sub_agents/analyser/: agent.py
src/agents/sub_agents/analyser/.adk/: session.db
src/agents/sub_agents/analyser_v2/: agent.py  find_message.py
src/agents/sub_agents/analyser_v2/.adk/: session.db
src/agents/sub_agents/executor/: agent.py
src/agents/sub_agents/executor/.adk/: session.db
src/agents/sub_agents/planner/: agent.py
src/agents/sub_agents/planner/.adk/: session.db
src/datas/: postgresql.md
src/datas/mindmap/1.商品管理模組/: 1.1商品類別維護.md  1.2商品主檔維護.md
src/datas/mindmap/2.儲位管理模組/: 2.1儲位分區維護.md
src/utils/: agent_patterns.py  db.py
